# bidkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pr-title.yml  publish.yml  release-please.yml
docs/: comparison.md  index.md
docs/guides/: authentication.md  configuration.md  logging.md  notifications.md  pagination.md  retries.md  signing.md
docs/reference/: apis.md  auth.md  client.md  helpers.md  notifications.md
examples/: async_inventory.py  ebay-cli-config.example.json  paginate_orders.py  search_items.py  signing-key.example.json
scripts/: gen_ref_pages.py  generate_openapi.py  live_finance_smoke.mjs  live_smoke.py  oauth_login.py  smoke_de.py  sync_ebay_specs.py
scripts/maintainers/: README.md  live_smoke.py  smoke_de.py
specs/ebay/: buy_browse_v1_oas3.json  buy_deal_v1_oas3.json  buy_feed_v1_beta_oas3.json  buy_marketing_v1_beta_oas3.json  buy_marketplace_insights_v1_beta_oas3.json  buy_offer_v1_beta_oas3.json  buy_order_v1_beta_oas3.json  commerce_catalog_v1_beta_oas3.json  commerce_charity_v1_oas3.json  commerce_feedback_v1_beta_oas3.json  commerce_identity_v1_oas3.json  commerce_media_v1_beta_oas3.json  commerce_message_v1_oas3.json  commerce_notification_v1_oas3.json  commerce_taxonomy_v1_oas3.json  commerce_translation_v1_beta_oas3.json  commerce_vero_v1_oas3.json  developer_analytics_v1_beta_oas3.json  developer_client_registration_v1_oas3.json  developer_key_management_v1_oas3.json  sell_account_v1_oas3.json  sell_account_v2_oas3.json  sell_analytics_v1_oas3.json  sell_edelivery_international_shipping_v1_oas3.json  sell_feed_v1_oas3.json  sell_finances_v1_oas3.json  sell_fulfillment_v1_oas3.json  sell_inventory_v1_oas3.json  sell_leads_v1_oas3.json  sell_logistics_v1_oas3.json  sell_marketing_v1_oas3.json  sell_metadata_v1_oas3.json  sell_negotiation_v1_oas3.json  sell_recommendation_v1_oas3.json  sell_stores_v1_oas3.json
specs/ebay/graphql/: inventory_mapping.graphqls
src/bidkit/: __init__.py  auth.py  client.py  config.py  models.py  notifications.py  pagination.py  resource.py  retry.py  transport.py
src/ebay_sdk/: __init__.py  auth.py  client.py  config.py  errors.py  models.py  pagination.py  resource.py  retry.py  signing.py  transport.py
tests/: conftest.py  test_auth_concurrency.py  test_client_lifecycle.py  test_client_options.py  test_config.py  test_content_negotiation.py  test_errors.py  test_generated_client.py  test_generator.py  test_logging.py  test_notifications.py  test_oauth.py  test_open_enums.py  test_package.py  test_pagination.py  test_retry.py  test_retry_auth_refresh.py  test_signing.py  test_token_cache.py
