[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ebay-sdk"
version = "0.1.0"
description = "A modern typed Python SDK for eBay REST and Traditional APIs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Parity SDK Contributors" }]
dependencies = [
  "httpx>=0.27",
  "orjson>=3.10",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "datamodel-code-generator[http]>=0.31",
  "pytest>=8.0",
  "ruff>=0.8",
  "ty>=0.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ebay_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
