[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ebay-sdk"
version = "0.1.0"
description = "A modern, typed Python SDK for the eBay REST APIs (unofficial)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "bidkit contributors" }]
keywords = ["ebay", "sdk", "api", "rest", "sell", "buy", "commerce", "marketplace"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=49.0.0",
  "httpx>=0.27",
  "orjson>=3.10",
  "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/heyalexej/bidkit"
Repository = "https://github.com/heyalexej/bidkit"
Issues = "https://github.com/heyalexej/bidkit/issues"

[project.optional-dependencies]
dev = [
  "datamodel-code-generator[http]>=0.31",
  "pytest>=8.0",
  "ruff>=0.8",
  "ty>=0.0.1",
]

# The eBay OpenAPI specs are committed for regeneration and review, but they are
# (c) eBay Inc. under the eBay API License Agreement and are deliberately kept out
# of every published artifact; only the generated code ships.
[tool.hatch.build.targets.sdist]
exclude = ["specs"]

[tool.hatch.build.targets.wheel]
packages = ["src/ebay_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
