[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "bidkit"
version = "0.1.0"
description = "A modern, typed Python SDK for the eBay REST APIs (unofficial)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "bidkit contributors" }]
keywords = ["ebay", "sdk", "api", "rest", "sell", "buy", "commerce", "marketplace"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=49.0.0",
  "httpx>=0.27",
  "orjson>=3.10",
  "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/heyalexej/bidkit"
Repository = "https://github.com/heyalexej/bidkit"
Issues = "https://github.com/heyalexej/bidkit/issues"

[project.optional-dependencies]
dev = [
  "datamodel-code-generator[http]>=0.66.3",
  "pytest>=8.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.8",
  "ty>=0.0.56",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

# The eBay OpenAPI specs are committed for regeneration and review, but they are
# (c) eBay Inc. under the eBay API License Agreement and are deliberately kept out
# of every published artifact; only the generated code ships.
[tool.hatch.build.targets.sdist]
exclude = ["specs"]

[tool.hatch.build.targets.wheel]
packages = ["src/bidkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]

# Coverage is measured over the hand-written runtime only: the generated layer is
# lazy-loaded by design (most model modules are intentionally never imported) and its
# correctness is covered by the wire-level tests plus the CI drift check.
[tool.coverage.run]
source = ["bidkit"]
omit = ["src/bidkit/generated/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
# Generated code is produced by the generator's own renderer/formatter and is
# guarded by the CI drift check instead of lint/format.
extend-exclude = ["src/bidkit/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
extra-paths = ["scripts"]
